{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 156,
  "lineage": "b1c16230-94a8-7258-0da0-3e7e1f3a946f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-020bba24b5ce2593d",
            "owner_id": "402084680610",
            "vpc_id": "vpc-0d0c24f8ac379bfb7"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d230f82e061d3eb2",
            "owner_id": "402084680610",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020bba24b5ce2593d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d0c24f8ac379bfb7"
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d6f3cb038bb56ba",
            "route_table_id": "rtb-0d230f82e061d3eb2",
            "subnet_id": "subnet-0a2677bf1e7c0d4a2"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402084680610:security-group/sg-069304f89a6b1a638",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069304f89a6b1a638",
            "ingress": [],
            "name": "all-inbound",
            "name_prefix": null,
            "owner_id": "402084680610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0c24f8ac379bfb7"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1457266242",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-069304f89a6b1a638",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.all_outbound"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402084680610:subnet/subnet-0a2677bf1e7c0d4a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a2677bf1e7c0d4a2",
            "map_public_ip_on_launch": true,
            "owner_id": "402084680610",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0d0c24f8ac379bfb7"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:402084680610:vpc/vpc-0d0c24f8ac379bfb7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a80e35cdc493470",
            "default_route_table_id": "rtb-067b4977918f79cf5",
            "default_security_group_id": "sg-070ca1094fe3e86ae",
            "dhcp_options_id": "dopt-cc6bd2b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0c24f8ac379bfb7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067b4977918f79cf5",
            "owner_id": "402084680610",
            "tags": {
              "Name": "cellranger-pipeline"
            }
          }
        }
      ]
    }
  ]
}